syntax = "proto3";

package cloud.lazycat.apis.localdevice;

option go_package = "gitee.com/linakesi/lzc-sdk/lang/go/localdevice";

import "google/protobuf/empty.proto";

service DeviceService {
  rpc Query(google.protobuf.Empty) returns (DeviceInfo) {}
}

message DeviceInfo {
  string OS = 1;
  string CPU = 2;
  string name = 3;
  string documentRootDir = 4;
  // 用于扫码或辅助登录标记操作端
  optional string identityProvider = 5;
}
